--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-feather": "^1.1.2",
+    "react-native-maps": "^1.15.6",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-video": "^6.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
